<resources>
    <string name="app_name">TodoApp</string>
    <string name="loading">Loading</string>
    <string name="no_data">No data</string>
    <string name="cant_be_empty">Can\'t be empty</string>
    <string name="empty">Empty</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm">delete?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="login">Login</string>
    <string name="otp_send">Otp send</string>
    <string name="sign_up">Sign up</string>
    <string name="send_otp">Send otp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password confirm</string>
    <string name="otp">otp</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="logout_confirm">Logout?</string>
</resources>
