<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/btnLogin"
        style="@style/AppTheme.Widget.TextView"
        android:text="@string/login" />

    <TextView
        android:id="@+id/btnSignUp"
        style="@style/AppTheme.Widget.TextView"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/btnForgotPassword"
        style="@style/AppTheme.Widget.TextView"
        android:text="@string/forgot_password" />
</LinearLayout>